--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "webpage"
+  title: "Thranholm.github.io"
   navbar:
     left:
       - href: index.qmd
