--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,6 @@
 project:
   type: website
+  output-dir: "docs"
   render: 
     - index.qmd
     - about.qmd
@@ -13,8 +14,6 @@ website:
       - about.qmd
       
 description: HEJ. DETTE ER EN TEST
-
-output_dir: "_site"
 
 format:
   html:
