--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,7 @@ project:
   render: 
     - index.qmd
     - about.qmd
+    - ftvalg/rapport.qmd
 
 website:
   title: "thranholm.github.io"
@@ -12,6 +13,7 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
+      - ftvalg/rapport.qmd
 
 format:
   html:
