--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
   render: 
     - index.qmd
     - about.qmd
-    - ftvalg/rapport.qmd
+    - FT_rapport.qmd
 
 website:
   title: "thranholm.github.io"
@@ -13,7 +13,7 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
-      - ftvalg/rapport.qmd
+      - FT_rapport.qmd
 
 format:
   html:
