--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,7 @@ project:
     - index.qmd
     - about.qmd
     - FT_rapport.qmd
+    - EP_rapport.qmd
 
 website:
   title: "thranholm.github.io"
@@ -14,6 +15,7 @@ website:
         text: Home
       - about.qmd
       - FT_rapport.qmd
+      - EP_rapport.qmd
 
 format:
   html:
