--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   quarto:
-    runs-on: ubuntu-latest
+    runs-on: macOS-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
