--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -26,6 +26,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+      - name: Install rmarkdown
+        run: Rscript -e 'install.packages("rmarkdown")'
+      - name: Install pacman
+        run: Rscript -e 'install.packages("pacman")'
       - name: Setup Pages
         uses: actions/configure-pages@v1
       - name: Render Website
