--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -22,6 +22,11 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
+      
+      - name: r setup
+        uses: r-lib/actions/setup-r@v1
+      - uses: r-lib/actions/setup-renv@v1
+    
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Install Quarto
