--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   build-deploy:
-    runs-on: ubuntu-latest
+    runs-on: macOS-latest
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
