--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -14,10 +14,10 @@ permissions:
 on:
   push:
     branches: ['main']
-  workflow_dispatch: manuel
+  workflow_dispatch:
 
 jobs:
-  build-deploy:
+  quarto-render:
     runs-on: macOS-latest
     steps:
       - name: Check out repository
@@ -25,20 +25,15 @@ jobs:
         
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-        # with:
-          # To install LaTeX to build PDF book 
-          # tinytex: true 
-          # uncomment below and fill to pin a version
-          # version: SPECIFIC-QUARTO-VERSION-HERE
 
       # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
-      # - name: Setup R
-      #   uses: r-lib/actions/setup-r@v2
+      # name: Setup R
+      # uses: r-lib/actions/setup-r@v2
 
       # NOTE: If Publishing to GitHub Pages, set the permissions correctly (see top of this yaml)
-       - name: Publish to GitHub Pages (and render) 
-         uses: quarto-dev/quarto-actions/publish@v2
-         with:
-           path: 'docs'
-         env:
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+      - name: Publish to GitHub Pages (and render) 
+        uses: quarto-dev/quarto-actions/publish@v2
+        with:
+          path: 'docs'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
