--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -34,6 +34,6 @@ jobs:
       - name: Publish to GitHub Pages (and render) 
         uses: quarto-dev/quarto-actions/publish@v2
         with:
-          path: 'docs'
+          target: gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
