--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -12,9 +12,9 @@ permissions:
   id-token: write
 
 on:
+  workflow_dispatch:
   push:
     branches: ['main']
-  workflow_dispatch:
 
 jobs:
   quarto-render:
@@ -35,5 +35,6 @@ jobs:
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
+          path: docs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
