--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -17,24 +17,57 @@ on:
     branches: ['main']
 
 jobs:
-  quarto-render:
-    runs-on: macOS-latest
+  quarto:
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-        
-      - name: Set up Quarto
+      - uses: r-lib/actions/setup-r@v1 
+
+      - name: Install rmarkdown
+        run: Rscript -e 'install.packages("rmarkdown")'
+      - name: Install pacman
+        run: Rscript -e 'install.packages("pacman")'
+    
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+      - name: Setup Pages
+        uses: actions/configure-pages@v1
+      - name: Render Website
+        run: quarto render
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: 'docs'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@main
+
+
+
+
+#jobs:
+#  quarto-render:
+ #   runs-on: macOS-latest
+  #  steps:
+   #   - name: Check out repository
+    #    uses: actions/checkout@v4
+        
+#      - name: Set up Quarto
+ #       uses: quarto-dev/quarto-actions/setup@v2
 
       # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
       # name: Setup R
       # uses: r-lib/actions/setup-r@v2
 
       # NOTE: If Publishing to GitHub Pages, set the permissions correctly (see top of this yaml)
-      - name: Publish to GitHub Pages (and render) 
-        uses: quarto-dev/quarto-actions/publish@v2
-        with:
-          target: gh-pages
-          path: docs
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+ #     - name: Publish to GitHub Pages (and render) 
+  #      uses: quarto-dev/quarto-actions/publish@v2
+  #      with:
+  #        target: gh-pages
+  #        path: docs
+  #      env:
+  #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
