--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -23,12 +23,12 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - uses: r-lib/actions/setup-r@v2
+   #   - uses: r-lib/actions/setup-r@v2
 
-      - name: Install rmarkdown
-        run: Rscript -e 'install.packages("rmarkdown")'
-      - name: Install pacman
-        run: Rscript -e 'install.packages("pacman")'
+  #   - name: Install rmarkdown
+   #     run: Rscript -e 'install.packages("rmarkdown")'
+   #   - name: Install pacman
+   #     run: Rscript -e 'install.packages("pacman")'
     
       - name: Checkout repository
         uses: actions/checkout@v3
