--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -25,8 +25,8 @@ jobs:
     steps:
    #   - uses: r-lib/actions/setup-r@v2
 
-  #   - name: Install rmarkdown
-   #     run: Rscript -e 'install.packages("rmarkdown")'
+      - name: Install rmarkdown
+        run: Rscript -e 'install.packages("rmarkdown")'
    #   - name: Install pacman
    #     run: Rscript -e 'install.packages("pacman")'
     
