--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -17,37 +17,33 @@ on:
     branches: ['main']
 
 jobs:
-  quarto:
-    runs-on: ubuntu-latest
+  # Single deploy job since we're just deploying
+  publish-site:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/dukestatsci/r_gh_actions:latest
     steps:
-   #   - uses: r-lib/actions/setup-r@v2
-
-   #   - name: Install rmarkdown
-   #     run: Rscript -e 'install.packages("rmarkdown")'
-   #   - name: Install pacman
-   #     run: Rscript -e 'install.packages("pacman")'
-    
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
-      - name: Install Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
+
+      - name: Build site
+        run: |
+          quarto render
+      
       - name: Setup Pages
-        uses: actions/configure-pages@v1
-      - name: Render Website
-        run: quarto render
+        uses: actions/configure-pages@v3
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: 'docs'
+      
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@main
-
-
-
+        uses: actions/deploy-pages@v1
 
 #jobs:
 #  quarto-render:
