--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -29,6 +29,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+
+      - name: Install pacman
+        run: Rscript -e 'install.packages("pacman")'
+
       - name: Build site
         run: |
           quarto render
