--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -22,7 +22,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: macos-latest
+    runs-on: macOS-latest
     container:
       image: ghcr.io/dukestatsci/r_gh_actions:latest
     steps:
