--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -16,57 +16,57 @@ on:
   push:
     branches: ['main']
 
+# jobs:
+#   # Single deploy job since we're just deploying
+#   publish-site:
+#     environment:
+#       name: github-pages
+#       url: ${{ steps.deployment.outputs.page_url }}
+#     runs-on: ubuntu-latest
+#     container:
+#       image: ghcr.io/dukestatsci/r_gh_actions:latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v3
+# 
+#       - name: Install pacman
+#         run: Rscript -e 'install.packages("pacman")'
+# 
+#       - name: Build site
+#         run: |
+#           quarto render
+#       
+#       - name: Setup Pages
+#         uses: actions/configure-pages@v3
+#       
+#       - name: Upload artifact
+#         uses: actions/upload-pages-artifact@v1
+#         with:
+#           path: 'docs'
+#       
+#       - name: Deploy to GitHub Pages
+#         id: deployment
+#         uses: actions/deploy-pages@v1
+
 jobs:
-  # Single deploy job since we're just deploying
-  publish-site:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/dukestatsci/r_gh_actions:latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+ quarto-render:
+   runs-on: macOS-latest
+   steps:
+     - name: Check out repository
+       uses: actions/checkout@v4
 
-      - name: Install pacman
-        run: Rscript -e 'install.packages("pacman")'
+     - name: Set up Quarto
+       uses: quarto-dev/quarto-actions/setup@v2
 
-      - name: Build site
-        run: |
-          quarto render
-      
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: 'docs'
-      
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
-
-#jobs:
-#  quarto-render:
- #   runs-on: macOS-latest
-  #  steps:
-   #   - name: Check out repository
-    #    uses: actions/checkout@v4
-        
-#      - name: Set up Quarto
- #       uses: quarto-dev/quarto-actions/setup@v2
-
-      # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
-      # name: Setup R
-      # uses: r-lib/actions/setup-r@v2
+      From https://github.com/r-lib/actions/tree/v2-branch/setup-r
+      name: Setup R
+      uses: r-lib/actions/setup-r@v2
 
       # NOTE: If Publishing to GitHub Pages, set the permissions correctly (see top of this yaml)
- #     - name: Publish to GitHub Pages (and render) 
-  #      uses: quarto-dev/quarto-actions/publish@v2
-  #      with:
-  #        target: gh-pages
-  #        path: docs
-  #      env:
-  #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+     - name: Publish to GitHub Pages (and render)
+      uses: quarto-dev/quarto-actions/publish@v2
+      with:
+        target: gh-pages
+        path: docs
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
