--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -47,7 +47,7 @@ on:
 #       - name: Deploy to GitHub Pages
 #         id: deployment
 #         uses: actions/deploy-pages@v1
-
+# 
 jobs:
  quarto-render:
    runs-on: macOS-latest
@@ -67,6 +67,7 @@ jobs:
       uses: quarto-dev/quarto-actions/publish@v2
       with:
         target: gh-pages
-        path: docs
+        # path: docs
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+
