--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -58,7 +58,7 @@ jobs:
      - name: Set up Quarto
        uses: quarto-dev/quarto-actions/setup@v2
 
-      From https://github.com/r-lib/actions/tree/v2-branch/setup-r
+      # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
       name: Setup R
       uses: r-lib/actions/setup-r@v2
 
