--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -52,18 +52,18 @@ jobs:
  quarto-render:
    runs-on: macOS-latest
    steps:
-     - name: Check out repository
-       uses: actions/checkout@v4
+    - name: Check out repository
+      uses: actions/checkout@v4
 
-     - name: Set up Quarto
-       uses: quarto-dev/quarto-actions/setup@v2
+    - name: Set up Quarto
+      uses: quarto-dev/quarto-actions/setup@v2
 
-      # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
-    - name: Setup R
+        # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
+    - name: setup-R
       uses: r-lib/actions/setup-r@v2
 
       # NOTE: If Publishing to GitHub Pages, set the permissions correctly (see top of this yaml)
-     - name: Publish to GitHub Pages (and render)
+    - name: Publish to GitHub Pages (and render)
       uses: quarto-dev/quarto-actions/publish@v2
       with:
         target: gh-pages
