--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -50,7 +50,7 @@ on:
 # 
 jobs:
  quarto-render:
-   runs-on: macOS-latest
+   runs-on: ubuntu-latest
    steps:
     - name: Check out repository
       uses: actions/checkout@v4
