--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -68,6 +68,7 @@ jobs:
         packages: |
           any::pacman
           any::rmarkdown
+          any::tidyverse
 
       # NOTE: If Publishing to GitHub Pages, set the permissions correctly (see top of this yaml)
     - name: Publish to GitHub Pages (and render)
