--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -61,14 +61,13 @@ jobs:
         # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
     - name: setup-R
       uses: r-lib/actions/setup-r@v2
-      
-    - name: Install packages
-      uses: r-lib/actions/setup-r-dependencies@v2
       with:
-        packages: |
-          any::pacman
-          any::rmarkdown
-          any::tidyverse
+        r-version: '4.3.1'
+      
+    - name: Install R Dependencies
+      uses: r-lib/actions/setup-renv@v2
+      with:
+        cache-version: 1
 
       # NOTE: If Publishing to GitHub Pages, set the permissions correctly (see top of this yaml)
     - name: Publish to GitHub Pages (and render)
