--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -16,41 +16,9 @@ on:
   push:
     branches: ['main']
 
-# jobs:
-#   # Single deploy job since we're just deploying
-#   publish-site:
-#     environment:
-#       name: github-pages
-#       url: ${{ steps.deployment.outputs.page_url }}
-#     runs-on: ubuntu-latest
-#     container:
-#       image: ghcr.io/dukestatsci/r_gh_actions:latest
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-# 
-#       - name: Install pacman
-#         run: Rscript -e 'install.packages("pacman")'
-# 
-#       - name: Build site
-#         run: |
-#           quarto render
-#       
-#       - name: Setup Pages
-#         uses: actions/configure-pages@v3
-#       
-#       - name: Upload artifact
-#         uses: actions/upload-pages-artifact@v1
-#         with:
-#           path: 'docs'
-#       
-#       - name: Deploy to GitHub Pages
-#         id: deployment
-#         uses: actions/deploy-pages@v1
-# 
 jobs:
  quarto-render:
-   runs-on: ubuntu-latest
+   runs-on: macos-latest
    steps:
     - name: Check out repository
       uses: actions/checkout@v4
