--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
  quarto-render:
-   runs-on: macos-latest
+   runs-on: ubuntu-latest
    steps:
     - name: Check out repository
       uses: actions/checkout@v4
