--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
 
+    - name: Install libudunits2
+      run: sudo apt-get install libudunits2-dev
+
         # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
     - name: setup-R
       uses: r-lib/actions/setup-r@v2
