--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -27,14 +27,8 @@ jobs:
       uses: quarto-dev/quarto-actions/setup@v2
 
       # alle mulige pakker, der har givet fejl
-    - name: Install libudunits2
-      run: sudo apt-get install libudunits2-dev
-
-    - name: Install libproj
-      run: sudo apt-get install libproj-dev
-
-    - name: Install libgdal
-      run: sudo apt-get install libgdal-dev
+    - name: Install libudunits2 libgdal libgeos libproj
+      run: sudo apt-get install libudunits2-dev libgdal-dev libgeos-dev libproj-dev
 
         # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
     - name: setup-R
