--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -13,8 +13,8 @@ permissions:
 
 on:
   workflow_dispatch:
-  push:
-    branches: ['main']
+  #push:
+  #  branches: ['main']
   schedule:
     - cron: "15 12 * * *"
 
