Dropdown med epvalg

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,9 @@ project:
     - index.qmd
     - about.qmd
     - FT_rapport.qmd
-    - render_ep_rapport.qmd
+    - "epvalg/EP_rapport_2009_fin.qmd"
+    - "epvalg/EP_rapport_2014_fin.qmd"
+    - "epvalg/EP_rapport_2019_fin.qmd"
     - mio6DK.qmd
 
 website:
@@ -19,7 +21,14 @@ website:
       - FT_rapport.qmd
       - href: render_ep_rapport.qmd
       - text: Europaparlamentsvalg
-      - EP_rapport.qmd
+        menu: 
+          - href: "epvalg/EP_rapport_2009_fin.qmd"
+            text: "2009"
+          - href: "epvalg/EP_rapport_2014_fin.qmd"
+            text: "2014"
+          - href: "epvalg/EP_rapport_2019_fin.qmd"
+            text: "2019"
+      # - EP_rapport.qmd
       - href: mio6DK.qmd
         text: 6 mio danskere
 format:
