--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -52,4 +52,6 @@ jobs:
         # path: docs
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+        FODBOLD_KEY: ${{ secrets.FODBOLD_KEY }}
+        PASS: ${{ secrets.PASS}}
 
