--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,7 @@ project:
     - "epvalg/EP_rapport_2014_fin.qmd"
     - "epvalg/EP_rapport_2019_fin.qmd"
     - mio6DK.qmd
+    - "fodbold_kalender/Tysk fodboldkort.qmd"
 
 website:
   title: "Emil Thranholm"
@@ -31,6 +32,8 @@ website:
       # - EP_rapport.qmd
       - href: mio6DK.qmd
         text: 6 mio danskere
+      - href: "fodbold_kalender/Tysk fodboldkort.qmd"
+        text: Fodbold kalender
 format:
   html:
     theme: cosmo
