--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -50,6 +50,9 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
         FODBOLD_KEY: ${{ secrets.FODBOLD_KEY }}
         PASS: ${{ secrets.PASS }}
+      run: |
+        sudo locale-gen da_DK.UTF-8
+        sudo update-locale LANG=da_DK.UTF-8
       uses: quarto-dev/quarto-actions/publish@v2
       with:
         target: gh-pages
