--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -34,7 +34,7 @@ jobs:
 
       # alle mulige pakker, der har givet fejl
     - name: Install libudunits2 libgdal libgeos libproj
-      run: install libudunits2-dev libgdal-dev libgeos-dev libproj-dev
+      run: sudo apt-get install libudunits2-dev libgdal-dev libgeos-dev libproj-dev
 
         # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
     - name: setup-R
