--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -29,12 +29,9 @@ jobs:
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
 
-    - name: apt-get
-      run: sudo apt-get install --fix-missing
-
       # alle mulige pakker, der har givet fejl
     - name: Install libudunits2 libgdal libgeos libproj
-      run: sudo apt-get install libudunits2-dev libgdal-dev libgeos-dev libproj-dev
+      run: sudo apt-get install libudunits2-dev libgdal-dev libgeos-dev libproj-dev --fix-missing
 
         # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
     - name: setup-R
