--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -26,14 +26,12 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v4
 
+# alle mulige pakker, der har givet fejl
+    - name: Install libudunits2 libgdal libgeos libproj
+      run: sudo apt-get install libgdal-dev libudunits2-dev libgeos-dev libproj-dev
+
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
-
-      # alle mulige pakker, der har givet fejl
-    - name: Install libudunits2 libgdal libgeos libproj
-      run: sudo apt-get install libgdal libudunits2-dev libgeos-dev libproj-dev
-
-        # libgdal-dev
 
         # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
     - name: setup-R
