--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -13,7 +13,8 @@ permissions:
 
 on:
   schedule:
-    - cron: "10 7 * * *"
+    #- cron: "10 7 * * *"
+    - cron: "30 17 * * *"
   workflow_dispatch:
   #push:
   #  branches: ['main']
@@ -64,5 +65,5 @@ jobs:
       uses: quarto-dev/quarto-actions/publish@v2
       with:
         target: gh-pages
-        # path: docs
+        path: mio6DK.qmd
 
