--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,8 @@ permissions:
   id-token: write
 
 on:
-  schedule:
-    - cron: "10 7 * * *"
+  #schedule:
+    #- cron: "10 7 * * *"
   workflow_dispatch:
   #push:
   #  branches: ['main']
@@ -55,7 +55,7 @@ jobs:
         sudo update-locale LANG=da_DK.UTF-8
 
       # NOTE: If Publishing to GitHub Pages, set the permissions correctly (see top of this yaml)
-    - name: Publish to GitHub Pages (and render)
+    - name: Render side
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
         FODBOLD_KEY: ${{ secrets.FODBOLD_KEY }}
@@ -63,5 +63,12 @@ jobs:
         LANG: "da_DK.UTF-8"
       uses: quarto-dev/quarto-actions/render@v2
       with:
-        #target: gh-pages
         path: mio6DK.qmd
+
+    - name: Publish to github pages
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+      uses: quarto-dev/quarto-actions/publish@v2
+      with:
+        target: gh-pages
+        render: false
