--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,7 +61,9 @@ jobs:
         LANG: "da_DK.UTF-8"
       uses: quarto-dev/quarto-actions/render@v2
       with:
-        path: mio6DK.qmd
+        path: |
+          index.qmd
+          mio6DK.qmd
 
     - name: Publish to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
