--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -36,9 +36,9 @@ jobs:
       run: sudo apt-get install libgdal-dev libudunits2-dev libgeos-dev libproj-dev
 
     - name: Set up python
-    - uses: actions/setup-python@v5 
+    - uses: actions/setup-python@v5
       with:
-        python-version: 'pypy3.12'
+        python-version: '3.12'
 
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
