--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,8 +4,8 @@ project:
   render: 
     - index.qmd
     - about.qmd
-    # - FT_rapport.qmd
-    # - stedmandat.qmd
+    - FT_rapport.qmd
+    - stedmandat.qmd
     - "epvalg/EP_rapport_2009.qmd"
     - "epvalg/EP_rapport_2014.qmd"
     - "epvalg/EP_rapport_2019.qmd"
