--- a/.github/workflows/EP2024_valg.yml
+++ b/.github/workflows/EP2024_valg.yml
@@ -12,8 +12,8 @@ permissions:
   id-token: write
 
 on:
- # schedule:
-  #  - cron: "10 6 * * *"
+  schedule:
+    - cron: "5,10,15,20,25,30,35,40,45,50,55 12 9 6 *"
   workflow_dispatch:
   #push:
   #  branches: ['main']
