--- a/.github/workflows/EP2024_valg.yml
+++ b/.github/workflows/EP2024_valg.yml
@@ -13,7 +13,7 @@ permissions:
 
 on:
   schedule:
-    - cron: "0,6,12,18,24,30,36,42,48,54 12 9 6 *"
+    - cron: "*/5 12 9 6 *"
   workflow_dispatch:
   #push:
   #  branches: ['main']
