--- a/.github/workflows/mio6DK.yml
+++ b/.github/workflows/mio6DK.yml
@@ -29,6 +29,11 @@ jobs:
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
 
+    - name: Install UDUNITS library
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libudunits2-dev
+
         # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
     - name: setup-R
       uses: r-lib/actions/setup-r@v2
