--- a/.github/workflows/mio6DK.yml
+++ b/.github/workflows/mio6DK.yml
@@ -26,13 +26,22 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v4
 
-    - name: Set up Quarto
-      uses: quarto-dev/quarto-actions/setup@v2
-
-    - name: Install UDUNITS library
+    - name: Update apt package lists
       run: |
         sudo apt-get update
-        sudo apt-get install -y libudunits2-dev
+        sudo apt-get install --fix-missing
+
+# alle mulige pakker, der har givet fejl
+    - name: Install libudunits2 libgdal libgeos libproj
+      run: sudo apt-get install libgdal-dev libudunits2-dev libgeos-dev libproj-dev
+
+# alle mulige pakker, der har givet fejl
+    - name: Install libudunits2 libgdal libgeos libproj
+      run: sudo apt-get install libgdal-dev libudunits2-dev libgeos-dev libproj-dev
+
+
+    - name: Set up Quarto
+      uses: quarto-dev/quarto-actions/setup@v2
 
         # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
     - name: setup-R
