--- a/.github/workflows/mio6DK.yml
+++ b/.github/workflows/mio6DK.yml
@@ -21,7 +21,7 @@ on:
 
 jobs:
  quarto-render:
-   runs-on: ubuntu-24.04
+   runs-on: ubuntu-latest
    steps:
     - name: Check out repository
       uses: actions/checkout@v4
