--- a/.github/workflows/fodboldkort.yml
+++ b/.github/workflows/fodboldkort.yml
@@ -62,6 +62,9 @@ jobs:
 # NOTE: If Publishing to GitHub Pages, set the permissions correctly (see top of this yaml)
     - name: Render fodboldkort
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+        FODBOLD_KEY: ${{ secrets.FODBOLD_KEY }}
+        PASS: ${{ secrets.PASS }}
         LANG: "da_DK.UTF-8"
       uses: quarto-dev/quarto-actions/render@v2
       with:
