--- a/.github/workflows/fodboldkort.yml
+++ b/.github/workflows/fodboldkort.yml
@@ -68,12 +68,12 @@ jobs:
         LANG: "da_DK.UTF-8"
       uses: quarto-dev/quarto-actions/render@v2
       with:
-        path: |
-          index.qmd
-          "fodbold_kalender/00_danner_fodbolddata.qmd"
-          "fodbold_kalender/Tysk fodboldkort.qmd"
-          "fodbold_kalender/Dansk fodboldkort.qmd"
-          "fodbold_kalender/Belgisk fodboldkort.qmd"
+        run: |
+          quarto render index.qmd
+          quarto render "fodbold_kalender/00_danner_fodbolddata.qmd"
+          quarto render "fodbold_kalender/Tysk fodboldkort.qmd"
+          quarto render "fodbold_kalender/Dansk fodboldkort.qmd"
+          quarto render "fodbold_kalender/Belgisk fodboldkort.qmd"
 
 
     - name: Publish to GitHub Pages
