--- a/.github/workflows/fodboldkort.yml
+++ b/.github/workflows/fodboldkort.yml
@@ -68,7 +68,7 @@ jobs:
         LANG: "da_DK.UTF-8"
       uses: quarto-dev/quarto-actions/render@v2
       with:
-        run: |
+        path: |
           quarto render index.qmd
           quarto render "fodbold_kalender/00_danner_fodbolddata.qmd"
           quarto render "fodbold_kalender/Tysk fodboldkort.qmd"
