--- a/.github/workflows/fodboldkort.yml
+++ b/.github/workflows/fodboldkort.yml
@@ -69,11 +69,11 @@ jobs:
       uses: quarto-dev/quarto-actions/render@v2
       with:
         path: |
-          quarto render index.qmd
-          quarto render "fodbold_kalender/00_danner_fodbolddata.qmd"
-          quarto render "fodbold_kalender/Tysk fodboldkort.qmd"
-          quarto render "fodbold_kalender/Dansk fodboldkort.qmd"
-          quarto render "fodbold_kalender/Belgisk fodboldkort.qmd"
+          index.qmd
+          "fodbold_kalender/00_danner_fodbolddata.qmd"
+          "fodbold_kalender/Tysk fodboldkort.qmd"
+          "fodbold_kalender/Dansk fodboldkort.qmd"
+          "fodbold_kalender/Belgisk fodboldkort.qmd"
 
 
     - name: Publish to GitHub Pages
