--- a/.github/workflows/fodboldkort.yml
+++ b/.github/workflows/fodboldkort.yml
@@ -60,7 +60,17 @@ jobs:
         sudo update-locale LANG=da_DK.UTF-8
 
 # NOTE: If Publishing to GitHub Pages, set the permissions correctly (see top of this yaml)
-    - name: Render fodboldkort
+    - name: Render index
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+        FODBOLD_KEY: ${{ secrets.FODBOLD_KEY }}
+        PASS: ${{ secrets.PASS }}
+        LANG: "da_DK.UTF-8"
+      uses: quarto-dev/quarto-actions/render@v2
+      with:
+        path: index.qmd
+          
+    - name: Render fod_kort
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
         FODBOLD_KEY: ${{ secrets.FODBOLD_KEY }}
@@ -69,11 +79,34 @@ jobs:
       uses: quarto-dev/quarto-actions/render@v2
       with:
         path: |
-          index.qmd
           "fodbold_kalender/00_danner_fodbolddata.qmd"
           "fodbold_kalender/Tysk fodboldkort.qmd"
           "fodbold_kalender/Dansk fodboldkort.qmd"
           "fodbold_kalender/Belgisk fodboldkort.qmd"
+
+    # - name: Render tyskland
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+    #     LANG: "da_DK.UTF-8"
+    #   uses: quarto-dev/quarto-actions/render@v2
+    #   with:
+    #     path: "fodbold_kalender/Tysk fodboldkort.qmd"
+    #       
+    # - name: Render danmark
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+    #     LANG: "da_DK.UTF-8"
+    #   uses: quarto-dev/quarto-actions/render@v2
+    #   with:
+    #     path: "fodbold_kalender/Dansk fodboldkort.qmd"
+    # 
+    # - name: Render belgien
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+    #     LANG: "da_DK.UTF-8"
+    #   uses: quarto-dev/quarto-actions/render@v2
+    #   with:
+    #     path: "fodbold_kalender/Belgisk fodboldkort.qmd"
 
 
     - name: Publish to GitHub Pages
