--- a/.github/workflows/fodboldkort.yml
+++ b/.github/workflows/fodboldkort.yml
@@ -89,7 +89,7 @@ jobs:
         LANG: "da_DK.UTF-8"
       uses: quarto-dev/quarto-actions/render@v2
       with:
-        path: "fodbold_kalender/Tysk fodboldkort.qmd"
+        path: "fodbold_kalender/Tysk\ fodboldkort.qmd"
 
     - name: Render danmark
       env:
