--- a/.github/workflows/fodboldkort.yml
+++ b/.github/workflows/fodboldkort.yml
@@ -88,8 +88,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
         LANG: "da_DK.UTF-8"
       uses: quarto-dev/quarto-actions/render@v2
-      with:
-        path: "fodbold_kalender/Tysk\ fodboldkort.qmd"
+      run: |
+        pwd
+        ls -la fodbold_kalender/
+        quarto render "fodbold_kalender/Tysk fodboldkort.qmd" --verbose
 
     - name: Render danmark
       env:
