--- a/.github/workflows/fodboldkort.yml
+++ b/.github/workflows/fodboldkort.yml
@@ -89,25 +89,23 @@ jobs:
         LANG: "da_DK.UTF-8"
       #uses: quarto-dev/quarto-actions/render@v2
       run: |
-        pwd
-        ls -la fodbold_kalender/
         quarto render "fodbold_kalender/Tysk fodboldkort.qmd" --verbose
 
     - name: Render danmark
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
         LANG: "da_DK.UTF-8"
-      uses: quarto-dev/quarto-actions/render@v2
-      with:
-        path: "fodbold_kalender/Dansk fodboldkort.qmd"
+      # uses: quarto-dev/quarto-actions/render@v2
+      run: |
+        quarto render "fodbold_kalender/Dansk fodboldkort.qmd"
 
     - name: Render belgien
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
         LANG: "da_DK.UTF-8"
-      uses: quarto-dev/quarto-actions/render@v2
-      with:
-        path: "fodbold_kalender/Belgisk fodboldkort.qmd"
+      # uses: quarto-dev/quarto-actions/render@v2
+      run: |
+        quarto render "fodbold_kalender/Belgisk fodboldkort.qmd"
 
 
     - name: Publish to GitHub Pages
