--- a/.github/workflows/fodboldkort.yml
+++ b/.github/workflows/fodboldkort.yml
@@ -91,6 +91,14 @@ jobs:
       run: |
         quarto render "fodbold_kalender/Tysk fodboldkort.qmd"
 
+    - name: Render tyskland regionalliga
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+        LANG: "da_DK.UTF-8"
+      #uses: quarto-dev/quarto-actions/render@v2
+      run: |
+        quarto render "fodbold_kalender/Tysk fodboldkort_amateur.qmd"
+
     - name: Render danmark
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
