--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,3 +1,6 @@
+filters: 
+  - shinylive
+
 project:
   type: website
   output-dir: "docs"
@@ -6,6 +9,7 @@ project:
     - about.qmd
     - FT_rapport.qmd
     - stedmandat.qmd
+    - komvalg_shiny.qmd
     - "epvalg/EP_rapport_2009.qmd"
     - "epvalg/EP_rapport_2014.qmd"
     - "epvalg/EP_rapport_2019.qmd"
