--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,11 +15,11 @@ project:
     - "epvalg/EP_rapport_2019.qmd"
     - "epvalg/EP_rapport_2024.qmd"
     - mio6DK.qmd
-    - fodbold_kalender/00_danner_fodbolddata_sportradar.qmd
-    - "fodbold_kalender/Tysk fodboldkort2.qmd"
-    # - "fodbold_kalender/Tysk fodboldkort_amateur.qmd"
-    - "fodbold_kalender/Dansk fodboldkort2.qmd"
-    - "fodbold_kalender/Belgisk fodboldkort2.qmd"
+    - fodbold_kalender/00_danner_fodbolddata.qmd
+    - "fodbold_kalender/Tysk fodboldkort.qmd"
+    - "fodbold_kalender/Tysk fodboldkort_amateur.qmd"
+    - "fodbold_kalender/Dansk fodboldkort.qmd"
+    - "fodbold_kalender/Belgisk fodboldkort.qmd"
 
 website:
   title: "Emil Thranholm"
@@ -46,13 +46,13 @@ website:
         text: 6 mio danskere
       - text: Fodboldkalender
         menu:
-          - href: "fodbold_kalender/Tysk fodboldkort2.qmd"
+          - href: "fodbold_kalender/Tysk fodboldkort.qmd"
             text: Tyskland
           - href: "fodbold_kalender/Tysk fodboldkort_amateur.qmd"
             text: Tyskland Regionalliga
-          - href: "fodbold_kalender/Dansk fodboldkort2.qmd"
+          - href: "fodbold_kalender/Dansk fodboldkort.qmd"
             text: Danmark
-          - href: "fodbold_kalender/Belgisk fodboldkort2.qmd"
+          - href: "fodbold_kalender/Belgisk fodboldkort.qmd"
             text: Belgien
       
 format:
